added about.html and contact.html

--- a/index.html
+++ b/index.html
@@ -7,74 +7,91 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="header">
-      <div class="container">
-        <nav>
-          <img src="assets/icons8-flower-48.png" class="logo" />
-          <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">ABOUT</a></li>
-            <li><a href="">SOCIALS</a></li>
-          </ul>
-        </nav>
-        <div class="header-text">
-          <p>FRONT END DEVELOPER</p>
-          <h1>
-            Hi there!I'm <span>Christine </span><br />June but friends call me
-            Juney.
-          </h1>
+    <div class="wrapper">
+      <div class="content">
+        <div id="header">
+          <div class="container">
+            <!-- <nav>
+              <img src="assets/icons8-flower-48.png" class="logo" />
+              <ul>
+                <li><a href="">HOME</a></li>
+                <li><a href="">ABOUT</a></li>
+                <li><a href="">SOCIALS</a></li>
+              </ul>
+            </nav> -->
+            <nav>
+              <div class="logo"><img src="assets/icons8-flower-48.png" class="logo" /></div>
+              <ul class="nav-links">
+                  <li><a href="#" class="active">Home</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+              </ul>
+          </nav>
+            <div class="header-text">
+              <p>FRONT END DEVELOPER - FUTURE SOFTWARE ENGINEER</p>
+              <h1>
+                Hi there!I'm <span>Christine </span><br />June but friends call me
+                Juney.
+              </h1>
+            </div>
+          </div>
+        </div>
+
+        <div id="ABOUT">
+          <div class="container">
+            <div class="row">
+              <div class="ABOUT-COL-1">
+                <img src="June.jpg" />
+              </div>
+              <div class="ABOUT-COL-2">
+                <h1 class="sub-title">About Me</h1>
+                <p>
+                  I'm Christine G. Mworia. Currently a Software Engineering student
+                  at Moringa School. Spent 4 years studying Business Management but
+                  honestly my heart wasn't there,but we thank God i am here.I'm a
+                  believer of Christ Jesus. I love cooking and watching insightful
+                  videos(mostly Christian videos). I also find myself spending my
+                  money at the movies when i decide to go 'out'.Lol!I've been a Gamer 
+                  since i was in primary school. Fave Console -Sony PS4-.I don't game 
+                  that much though nowadays but in a nutshell,i'm an ambivert who really 
+                  is an extrovert,loves the lord, a girl gamer who cooks good meals(as per 
+                  my family reviews),loves movies and i'll give you stories for days! In short;</p>
+
+                 <div class="skills">
+                  <ul>
+                    <li>A Girl Gamer</li>
+                    <li>Software Engineering Student</li>
+                    <li>A Gamer who cooks</li>
+                    <li>A believer</li>
+                    <li>An ambivert</li>
+                    <li>Oh! I'm also a Social media manager - that's my day job.</li>
+                  </ul>
+                </div>
+                  
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <footer class="footer">
+        <div class="socials">
+          <a href="#"></a>
+          <a href="#"></a>
+          <a href="#"></a>
+        </div>
+        <ul>
+          <li>
+            <a href="">FAQ</a>
+          </li>
+          <li>
+            <a href="">About me</a>
+          </li>
+          <li>
+            <a href="">Socials</a>
+          </li>
+        </ul>
+        <p class="copyright">© 2025 Christine G.M | All Rights Reserved</p>
+      </footer>
     </div>
-
-    <div id="ABOUT">
-      <div class="container">
-        <div class="row">
-          <div class="ABOUT-COL-1">
-            <img src="June.jpg" />
-          </div>
-          <div class="ABOUT-COL-2">
-            <h1 class="sub-title">About Me</h1>
-            <p>
-              I'm Christine G. Mworia. Currently a Software Engineering student
-              at Moringa School. Spent 4 years studying Business Management but
-              honestly my heart wasn't there,but we thank God i am here.I'm a
-              believer of Christ Jesus. I love cooking and watching insightful
-              videos(mostly Christian videos). I also find myself spending my
-              money at the movies when i decide to go 'out'.Lol!And a Gamer-Fave Console Sony -PS4 In a nutshell
-              i'm an ambivert who is really an extrovert, loves the lord,cooks
-              good meals(as per my family reviews),loves the movies and i'll
-              give you stories for days!
-            </p>
-
-      </div>
-    </div>
-
-    <footer class="footer">
-
-   <div class="socials">
-    <a href="#"></a>
-    <a href="#"></a>
-    <a href="#"></a>
-   </div>
-
-   <ul class="lists">
-    <li>
-       <a href="">FAQ</a>
-     </li>
-
-     <li>
-        <a href="">About me</a>
-     </li>
-
-     <li>
-        <a href="">Socials</a>
-     </li>
-   </ul>
-
-   <p class="copyright">© 2025 Christine G.M | All Rights Reserved</p>
-
-
-    </footer>
   </body>
 </html>
